@@ -1,3 +1,7 @@
+2012-09-05  Magnus Henoch  <magnus.henoch@gmail.com>
+
+	* nnmaildir.el (nnmaildir--article-set-flags): Fix compilation error.
+
 2012-09-05  Martin Stjernholm  <mast@lysator.liu.se>
 
 	* nnimap.el (nnimap-request-move-article): Decode the group name when
